WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275072
[UnifiedPDF] Cannot zoom out on certain large documents
https://bugs.webkit.org/show_bug.cgi?id=275072
Summary
[UnifiedPDF] Cannot zoom out on certain large documents
Sammy Gill
Reported
2024-06-03 13:15:43 PDT
Created
attachment 471583
[details]
Testcase There are certain documents in which you can get into a state where you can no longer zoom out. This may be on initial load or when you zoom in. On the attached PDF you cannot zoom out when you load the document. If you zoom in once you also cannot zoom out.
Attachments
Testcase
(2.68 MB, application/pdf)
2024-06-03 13:15 PDT
,
Sammy Gill
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2024-06-03 13:16:01 PDT
rdar://128915788
Sammy Gill
Comment 2
2024-06-03 16:09:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29478
EWS
Comment 3
2024-06-03 22:50:26 PDT
Committed
279688@main
(fc175103f7d8): <
https://commits.webkit.org/279688@main
> Reviewed commits have been landed. Closing PR #29478 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug